[package]
name = "wautomata"
version = "0.1.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wautomata"
repository = "https://github.com/Wandalen/wTools/tree/master/module/rust/wautomata"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/rust/wautomata"
description = """
Implementation of automata.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

include = [
  "/rust/impl/automata/wautomata_lib",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[lib]
name = "wautomata"
path = "rust/impl/automata/wautomata_lib.rs"

[[test]]
name = "wautomata_test"
path = "rust/test/automata/wautomata_lib_test.rs"

[[test]]
name = "wautomata_smoke_test"
path = "rust/test/_integration_test/smoke_test.rs"

# [[example]]
# name = "wautomata_trivial_sample"
# path = "sample/rust/wautomata_trivial_sample/src/main.rs"

[dependencies]
automata_tools = { version = "~0.1", path = "../../move/automata_tools", features = [] }
wtools = { version = "~0.2", path = "../../rust/wtools", features = [] }

[dev-dependencies]
test_tools = { version = "~0.1", path = "../../rust/test_tools" }
