[package]
name = "wautomata"
version = "0.1.2"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wautomata"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/wautomata"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/wautomata"
description = """
Implementation of automata.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/graph/wautomata_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ ]
full = []
# use_std = []
no_std = []
use_alloc = []

[lib]
name = "wautomata"
path = "src/graph/wautomata_lib.rs"

[[test]]
name = "wautomata_test"
path = "tests/graph/wautomata_tests.rs"

[[test]]
name = "wautomata_smoke_test"
path = "tests/_integration_test/smoke_test.rs"

# [[example]]
# name = "wautomata_trivial_sample"
# path = "examples/wautomata_trivial_sample/src/main.rs"

[dependencies]
automata_tools = { version = "~0.1", path = "../../move/automata_tools", features = [ "full" ] }

[dev-dependencies]
test_tools = { workspace = true }
wtools = { workspace = true }

