[package]
name = "werror"
version = "0.1.3"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/werror"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/werror"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/werror"
description = """
Basic exceptions handling mechanism.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/error/werror_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

# = features

[features]
default = [
  "use_std",
  "error_handling_for_lib",
  "error_handling_for_app"
]
full = [
  "use_std",
  "use_alloc",
  "error_handling_for_lib",
  "error_handling_for_app"
]
use_std = [ "error_tools/use_std" ]
use_alloc = []

error_handling_for_lib = [
  "use_std",
  "error_tools/error_handling_for_lib"
]
error_handling_for_app = [
  "use_std",
  "error_tools/error_handling_for_app"
]

# = entry

[lib]
name = "werror"
path = "rust/impl/error/werror_lib.rs"

[[test]]
name = "error_test"
path = "rust/test/error/werror_tests.rs"

[[test]]
name = "werror_smoke_test"
path = "rust/test/_integration_test/smoke_test.rs"

# [[example]]
# name = "werror_trivial_sample"
# path = "sample/rust/werror_trivial_sample/src/main.rs"

[dependencies]
error_tools = { version = "~0.1", path = "../../rust/error_tools", default-features = false }

[dev-dependencies]
test_tools = { version = "~0.1", path = "../../rust/test_tools" }
