[package]
name = "werror"
version = "0.1.3"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/werror"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/werror"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/werror"
description = """
Basic exceptions handling mechanism.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/error/werror_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

# = features

[features]
default = [
  "error_handling_for_lib",
  "error_handling_for_app"
]
full = [
  "use_alloc",
  "error_handling_for_lib",
  "error_handling_for_app"
]
# use_std = [ "error_tools/use_std" ]
no_std = [ "error_tools/no_std" ]
use_alloc = []
enabled = []

error_handling_for_lib = [
  # "use_std",
  "error_tools/error_handling_for_lib"
]
error_handling_for_app = [
  # "use_std",
  "error_tools/error_handling_for_app"
]

# = entry

[lib]
name = "werror"
path = "src/error/werror_lib.rs"

[[test]]
name = "error_test"
path = "tests/error/werror_tests.rs"

[[test]]
name = "werror_smoke_test"
path = "tests/_integration_test/smoke_test.rs"

# [[example]]
# name = "werror_trivial_sample"
# path = "examples/werror_trivial_sample/src/main.rs"

[dependencies]
error_tools = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
smoke_test = { workspace = true }
