[package]
name = "willbe2"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/willbe2"
repository = "https://github.com/Wandalen/wTools/tree/master/module/rust/willbe2"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/rust/willbe2"
description = """
___
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/_blank",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
use_std = []
use_alloc = []
default = [ "use_std" ]
full = [ "use_std", "use_alloc" ]

[lib]
name = "willbe2"
path = "rust/impl/_blank/standard_lib.rs"

[[test]]
name = "willbe2_test"
path = "rust/test/_blank/lib_test.rs"

# [[test]]
# name = "willbe2_smoke_test"
# path = "rust/test/_integration_test/smoke_test.rs"

# [[example]]
# name = "willbe2_trivial_sample"
# path = "sample/rust/willbe2_trivial_sample/src/main.rs"

[dependencies]

[dev-dependencies]
test_tools = { version = "~0.1", path = "../../rust/test_tools" }
