[package]
name = "willbe2"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/willbe2"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/willbe2"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/willbe2"
description = """
___
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/_blank",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
# use_std = []
no_std = []
use_alloc = []
enabled = []

[lib]
name = "willbe2"
path = "src/_blank/standard_lib.rs"

[[test]]
name = "willbe2_test"
path = "tests/_blank/tests.rs"

# [[test]]
# name = "willbe2_smoke_test"
# path = "tests/_integration_test/smoke_test.rs"

# [[example]]
# name = "willbe2_trivial_sample"
# path = "examples/willbe2_trivial_sample/src/main.rs"

[dependencies]

[dev-dependencies]
test_tools = { workspace = true }
# smoke_test = { workspace = true }
