[package]
name = "willbe2"
version = "0.2.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/willbe2"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/willbe2"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/willbe2"
description = """
Utility to publish multi-crate and multi-workspace environments and maintain their consistency.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
use_alloc = []
enabled = []

[dependencies]

[dev-dependencies]
test_tools = { workspace = true }
