[package]
name = "wproc_macro"
version = "0.1.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/wproc_macro"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/wproc_macro"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/wproc_macro"
description = """
Tools for writing procedural macroses.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/proc_macro/wproc_macro_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ ]
full = []
# use_std = []
no_std = []
use_alloc = []

[lib]
name = "wproc_macro"
path = "src/proc_macro/wproc_macro_lib.rs"

[[test]]
name = "macro_tools_test"
path = "tests/proc_macro/wproc_macro_tests.rs"

[[test]]
name = "wproc_macro_smoke_test"
path = "tests/_integration_test/smoke_test.rs"

[dependencies]
macro_tools = { workspace = true }

[dev-dependencies]
trybuild = { version = "~1.0", features = [ "diff" ] }
test_tools = { workspace = true }
smoke_test = { workspace = true }
# quote = "~1.0"
