[package]
name = "brain_kit"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "readme.md"
documentation = "https://docs.rs/brain_kit"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/brain_kit"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/brain_kit"
description = """
Toolkit for brain and cognitive processing utilities.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[workspace]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]

[dev-dependencies]