[package]
name = "config_hierarchy"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "readme.md"
documentation = "https://docs.rs/config_hierarchy"
repository = "https://github.com/Wandalen/wTools/tree/master/module/blank/config_hierarchy"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/blank/config_hierarchy"
description = """
Hierarchical configuration management with layered overrides and precedence.
"""
categories = [ "config", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "configuration", "hierarchy" ]

[workspace]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]

[dev-dependencies]
