[package]
name = "math_tools"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/template_blank"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/template_blank"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/template_blank"
description = """
Math tools
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/_blank",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
# use_std = []
no_std = []
use_alloc = []
enabled = []

[lib]
name = "template_blank"
path = "src/_blank/standard_lib.rs"

[[test]]
name = "template_blank_test"
path = "tests/_blank/tests.rs"

# [[test]]
# name = "template_blank_smoke_test"
# path = "tests/_integration_test/smoke_test.rs"

# [[example]]
# name = "template_blank_trivial_sample"
# path = "examples/template_blank_trivial_sample/src/main.rs"

[dependencies]

[dev-dependencies]
test_tools = { workspace = true }
smoke_test = { workspace = true }
