[package]
name = "mindful"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "readme.md"
documentation = "https://docs.rs/mindful"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/mindful"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/mindful"
description = """
Tools for mindfulness and awareness in development workflows.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[workspace]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]

[dev-dependencies]