[package]
name = "mod_interface_runtime"
version = "0.1.2"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/mod_interface_runtime"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/mod_interface_runtime"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/mod_interface_runtime"
description = """
Protocol of modularity unifying interface of a module and introducing layers.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "builder-pattern" ]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

# xxx : unify structure with other procedural macroses
exclude = [ "/tests", "/examples", "-*" ]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
no_std = []
use_alloc = []
enabled = []

[lib]
name = "mod_interface_runtime"

[dependencies]

[dev-dependencies]
test_tools = { workspace = true }
# smoke_test = { workspace = true }
