[package]
name = "obox"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "readme.md"
documentation = "https://docs.rs/obox"
repository = "https://github.com/Wandalen/wTools/tree/master/module/blank/obox"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/blank/obox"
description = """
Out-of-the-box utilities and ready-to-use tools.
"""
categories = [ "development-tools" ]
keywords = [ "fundamental", "general-purpose", "utilities" ]

[workspace]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]

[dev-dependencies]
