[package]
name = "runbox"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "readme.md"
documentation = "https://docs.rs/runbox"
repository = "https://github.com/Wandalen/wTools/tree/master/module/blank/runbox"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/blank/runbox"
description = """
Sandboxed code execution environment and runtime isolation tools.
"""
categories = [ "development-tools" ]
keywords = [ "fundamental", "general-purpose", "sandbox" ]

[workspace]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]

[dev-dependencies]
