[package]
name = "saferun"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "readme.md"
documentation = "https://docs.rs/saferun"
repository = "https://github.com/Wandalen/wTools/tree/master/module/blank/saferun"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/blank/saferun"
description = """
Safe code execution tools and utilities.
"""
categories = [ "development-tools" ]
keywords = [ "fundamental", "general-purpose", "safety" ]

[workspace]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]

[dev-dependencies]
