[package]

autobins = false
autoexamples = false
autotests = false
autobenches = false

name = "select_matching"
version = "0.0.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/select_matching"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/select_matching"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/select_matching"
description = """
Macro to answer the question: does it implement a trait?
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

include = [
  "/rust/impl/meta/select_matching_impl.rs",
  "/rust/impl/meta/select_matching.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

# [lib]
# name = "select_matching"
# path = "src/meta/select_matching.rs"
#
# [[test]]
# name = "select_matching_test"
# path = "tests/meta/select_matching_test.rs"

# [[test]]
# name = "select_matching_smoke_test"
# path = "tests/_integration_test/smoke_test.rs"

# [[example]]
# name = "trivial"
# path = "examples/select_matching_trivial/src/main.rs"

[dependencies]

[dev-dependencies]
# trybuild = { version = "~1.0", features = [ "diff" ] }
test_tools = { workspace = true }
# smoke_test = { workspace = true }
